@@ -94,6 +94,9 @@ max_baby_parameter: 80
 // Same as max_parameter, but for third classes.
 max_third_parameter: 120
 
+// Same as max_parameter, but for third baby classes.
+max_baby_third_paramater: 100
+
 // Max armor def/mdef 
 // NOTE: does not affects skills and status effects like Mental Strength
 // If weapon_defense_type is non-zero, it won't apply to max def.
